# AupProject

./: aupinfo.json  aupinstall.nsi
AutoUpdateClient/: CMakeLists.txt
AutoUpdateClient/AutoUpdateProgress/: CMakeLists.txt  aupprogress.cpp  aupprogress.h  main.cpp
AutoUpdateClient/AutoUpdateService/: CMakeLists.txt  main.cpp  serviceinit.cpp  serviceinit.h
AutoUpdateClient/AutoUpdatedll/: CMakeLists.txt  autoupdater.cpp  autoupdater.h
AutoUpdateClient/lib/: CMakeLists.txt  autoupdater.cpp
AutoUpdateClient/src/: aupclient.cpp  aupclient.h  main.cpp
AutoUpdateService/: CMakeLists.txt  main.cpp
AutoUpdater/: CMakeLists.txt
AutoUpdater/lib/: CMakeLists.txt  autoupdater.cpp  autoupdater.h
AutoUpdater/src/: aupclient.cpp  aupclient.h  main.cpp
AutoUpdaterService/src/: aupservice.cpp  aupservice.h
lib/: autoupdater.h
